/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package Domain.Payments.Adaptee;

/**
 *
 * @author boud-
 */
public interface SubmitAdaptee {
    
    public String submit();
}

