/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package Domain.Taxes;

import Domain.Sales.Register;

/**
 *
 * @author boud-
 */
public interface TaxADAPTER {
    public double TaxPercentage(Register reg);
}
